--- a/metadata/md5-cache/dev-db/clickhouse-19.15.2.2
+++ b/metadata/md5-cache/dev-db/clickhouse-19.15.2.2
@@ -3,6 +3,7 @@ DEPEND=dev-libs/re2:0= !static? ( >=app-arch/lz4-1.8.0:= >=app-arch/zstd-1.3.4:=
 DESCRIPTION=An OSS column-oriented database management system for real-time data analysis
 EAPI=6
 HOMEPAGE=https://clickhouse.yandex
+INHERIT=cmake-utils systemd toolchain-funcs user
 IUSE=+client cpu_flags_x86_sse4_2 +server debug doc kafka mongodb mysql static test tools
 KEYWORDS=~amd64
 LICENSE=Apache-2.0
@@ -11,5 +12,5 @@ REQUIRED_USE=server? ( cpu_flags_x86_sse4_2 ) static? ( client server tools )
 RESTRICT=!test? ( test )
 SLOT=0/stable
 SRC_URI=https://github.com/yandex/ClickHouse/archive/v19.15.2.2-stable.zip -> clickhouse-19.15.2.2.zip https://github.com/google/cctz/archive/4f9776a.tar.gz -> cctz-4f9776a.tar.gz
-_eclasses_=cmake-utils	f40ef5c4fb8eda19cca8d6604bef497e	desktop	c0d27bf73aa08ca05b663dbd31fbef28	edos2unix	33e347e171066657f91f8b0c72ec8773	epatch	9f813bb3c47cf2e60619a663b87c5f4e	estack	055c42df72f76a4f45ec92b35e83cd56	eutils	dab5d8ec471d025b79c9e6906bcf3bff	flag-o-matic	4134b5c0fb719b9161d10bdaba9e09e5	ltprune	4f3f2db5ce3ccbeeacdf3f94954043aa	multilib	4b66d835ec72e021e359bb81eacfe988	multiprocessing	61c959fc55c15c00bbb1079d6a71370b	ninja-utils	a4dab848a4490e8e48cf0baab3e61bc2	preserve-libs	dbc9f8d2d49c66467bc327fddd8317bd	strip-linguas	ac3ee41ee2d31d8c41a77c0838320cc7	systemd	2736b403a83f194b59b767f3b344c2c1	toolchain-funcs	9ea1c67b6f8315fdc2568abb674519aa	user	1033b6bed7cf367c4507ea9a3ff503d0	user-info	2e75eaea3582b052ec16d9d5aa74ced3	vcs-clean	b690a7e9b6c497cf59326a7545df4283	wrapper	4251d4c84c25f59094fd557e0063a974	xdg-utils	27f9a2f19502b925ac117bd657aa2979
+_eclasses_=cmake-utils	f40ef5c4fb8eda19cca8d6604bef497e	desktop	c0d27bf73aa08ca05b663dbd31fbef28	edos2unix	33e347e171066657f91f8b0c72ec8773	epatch	9f813bb3c47cf2e60619a663b87c5f4e	estack	055c42df72f76a4f45ec92b35e83cd56	eutils	dab5d8ec471d025b79c9e6906bcf3bff	flag-o-matic	4134b5c0fb719b9161d10bdaba9e09e5	ltprune	4f3f2db5ce3ccbeeacdf3f94954043aa	multilib	4b66d835ec72e021e359bb81eacfe988	multiprocessing	61c959fc55c15c00bbb1079d6a71370b	ninja-utils	a4dab848a4490e8e48cf0baab3e61bc2	preserve-libs	dbc9f8d2d49c66467bc327fddd8317bd	strip-linguas	ac3ee41ee2d31d8c41a77c0838320cc7	systemd	2736b403a83f194b59b767f3b344c2c1	toolchain-funcs	9ea1c67b6f8315fdc2568abb674519aa	user	1033b6bed7cf367c4507ea9a3ff503d0	user-info	2e75eaea3582b052ec16d9d5aa74ced3	vcs-clean	b690a7e9b6c497cf59326a7545df4283	wrapper	4251d4c84c25f59094fd557e0063a974	xdg-utils	4f29a8b760a594a212abe9c2ba957c31
 _md5_=788609d719477b8550950b9e55b7be60
